@@ -67,7 +67,6 @@
         <dropwizard.jdbi.version>1.3.29</dropwizard.jdbi.version>
         <org.reflections.version>0.9.12</org.reflections.version>
         <mockito.core.version>4.2.0</mockito.core.version>
-        <junit.version>4.13.2</junit.version>
         <slf4j.version>1.7.33</slf4j.version>
 
         <!--Sonar / Code Coverage-->
@@ -75,6 +74,7 @@
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
         <surefire.version>2.22.2</surefire.version>
+        <junit.jupiter.version>5.4.0</junit.jupiter.version>
         <sonar.language>java</sonar.language>
         <jacoco.version>0.8.6</jacoco.version>
     </properties>
@@ -112,15 +112,26 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
 
     <build>
+        <pluginManagement>
+            <!--Maven Surefire Plugin-->
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <!--Jacoco Code Coverage Plugin-->
             <plugin>
@@ -159,43 +170,6 @@
                 </configuration>
             </plugin>
 
-            <!--Maven Surefire Plugin-->
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.version}</version>
-                <configuration>
-                    <printSummary>true</printSummary>
-                    <properties>
-                        <property>
-                            <name>junit</name>
-                            <value>false</value>
-                        </property>
-                    </properties>
-                    <threadCount>1</threadCount>
-                    <argLine>-XX:MaxPermSize=512m</argLine>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>${surefire.version}</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <argLine>${surefireArgLine}</argLine>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!--Maven Sources Plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
